Configure new ExecMojo 'includePluginDependencies' parameter as input property

--- a/build-caching-maven-samples/exec-yarn-project/pom.xml
+++ b/build-caching-maven-samples/exec-yarn-project/pom.xml
@@ -122,6 +122,9 @@
                             <name>forceJava</name>
                           </property>
                           <property>
+                            <name>includePluginDependencies</name>
+                          </property>
+                          <property>
                             <name>skip</name>
                           </property>
                           <property>
