--- a/build-data-capturing-gradle-samples/capture-max-parallel-forks/gradle-max-parallel-forks.gradle
+++ b/build-data-capturing-gradle-samples/capture-max-parallel-forks/gradle-max-parallel-forks.gradle
@@ -1,10 +1,10 @@
-def buildScan = project.extensions.findByName('buildScan')
-if (!buildScan) {
+def develocityApi = project.extensions.findByName('develocity')
+if (!develocityApi) {
     return
 }
 
 allprojects {
     tasks.withType(Test).configureEach {
-        buildScan.value "${identityPath}#maxParallelForks", "$maxParallelForks"
+        develocityApi.getBuildScan().value("${identityPath}#maxParallelForks", "$maxParallelForks")
     }
 }
