Include LICENSE file in published Jar

--- a/quarkus-build-caching-extension/pom.xml
+++ b/quarkus-build-caching-extension/pom.xml
@@ -143,6 +143,15 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <targetPath>META-INF</targetPath>
+                <directory>${basedir}</directory>
+                <includes>
+                    <include>LICENSE</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
     <profiles>
