--- a/quarkus-build-caching-extension/pom.xml
+++ b/quarkus-build-caching-extension/pom.xml
@@ -145,6 +145,9 @@
         </plugins>
         <resources>
             <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+            <resource>
                 <targetPath>META-INF</targetPath>
                 <directory>${basedir}</directory>
                 <includes>
