--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -9,41 +9,50 @@ on:
     paths: [ 'build-caching-maven-samples/**', '.github/workflows/**' ]
   workflow_dispatch:
 
+env:
+  PROJECT_DIR: build-caching-maven-samples
+  GOALS: verify
+  ARGS: -B -Ddevelocity.cache.failOnUnhandledParameters=true
+
 jobs:
   verification:
     name: Verification
     runs-on: ubuntu-latest
     steps:
-      - uses: gradle/gradle-enterprise-build-validation-scripts/.github/actions/maven/download@actions-stable
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: Set up Maven
+        uses: gradle/develocity-actions/maven-setup@v1.1
+        with:
+          develocity-access-key: ${{ secrets.DV_SOLUTIONS_ACCESS_KEY }}
       - name: Setup Node.js and Npm
         uses: actions/setup-node@v4
         with:
           node-version: '14'
       - name: Set up Yarn
         run: npm install -g yarn
-      - name: Verify cacheable goals are retrieved from the build cache
-        id: build
-        working-directory: gradle-enterprise-maven-build-validation
-        run: |
-          set -o pipefail
-          ./02-validate-local-build-caching-different-locations.sh \
-            -r "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git" \
-            -c "$GITHUB_SHA" \
-            -p "build-caching-maven-samples" \
-            -g "verify" \
-            -a "-Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug -B" \
-            -s "https://ge.solutions-team.gradle.com" \
-            -f -e 2>&1 | tee -a /tmp/build.log
-          echo "hasUnknownParams=$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/build.log | wc -l)" >> $GITHUB_OUTPUT
-        env:
-          DEVELOCITY_ACCESS_KEY: ${{ secrets.DV_SOLUTIONS_ACCESS_KEY }}
-      - name: Verify no unmapped mojo parameters
-        if: (success() || failure()) && steps.build.outputs.hasUnknownParams != '0'
-        run: exit 1
+      - name: Download latest version of the Develocity Build Validation Scripts
+        uses: gradle/gradle-enterprise-build-validation-scripts/.github/actions/maven/download@actions-stable
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run experiment 1
+        uses: gradle/gradle-enterprise-build-validation-scripts/.github/actions/maven/experiment-1@actions-stable
+        with:
+          gitRepo: ${{ github.server_url }}/${{ github.repository }}
+          gitCommitId: ${{ github.sha }}
+          projectDir: ${{ env.PROJECT_DIR }}
+          goals: ${{ env.GOALS }}
+          args: ${{ env.ARGS }}
+          failIfNotFullyCacheable: true
+      - name: Run experiment 2
+        uses: gradle/gradle-enterprise-build-validation-scripts/.github/actions/maven/experiment-2@actions-stable
+        with:
+          gitRepo: ${{ github.server_url }}/${{ github.repository }}
+          gitCommitId: ${{ github.sha }}
+          projectDir: ${{ env.PROJECT_DIR }}
+          goals: ${{ env.GOALS }}
+          args: ${{ env.ARGS }}
+          failIfNotFullyCacheable: true
