--- a/build-caching-maven-samples/avro-project/pom.xml
+++ b/build-caching-maven-samples/avro-project/pom.xml
@@ -87,18 +87,19 @@
                       </fileSet>
                     </fileSets>
                     <properties>
+                      <property><name>createNullSafeAnnotations</name></property>
                       <property><name>createOptionalGetters</name></property>
                       <property><name>createSetters</name></property>
-                      <property><name>enableDecimalLogicalType</name></property>
-                      <property><name>gettersReturnOptional</name></property>
-                      <property><name>optionalGettersForNullableFieldsOnly</name></property>
-
-                      <property><name>stringType</name></property>
-                      <property><name>imports</name></property>
-                      <property><name>fieldVisibility</name></property>
-
                       <property><name>customConversions</name></property>
                       <property><name>customLogicalTypeFactories</name></property>
+                      <property><name>enableDecimalLogicalType</name></property>
+                      <property><name>errorSpecificClass</name></property>
+                      <property><name>fieldVisibility</name></property>
+                      <property><name>gettersReturnOptional</name></property>
+                      <property><name>imports</name></property>
+                      <property><name>optionalGettersForNullableFieldsOnly</name></property>
+                      <property><name>recordSpecificClass</name></property>
+                      <property><name>stringType</name></property>
                       <property><name>templateDirectory</name></property>
                       <property><name>velocityToolsClassesNames</name></property>
                     </properties>
